Сделала задание "Анимируем смены состояний интерактивных элементов"

--- a/source/scss/blocks/slider.scss
+++ b/source/scss/blocks/slider.scss
@@ -62,6 +62,13 @@
       }
     }
   }
+
+  &.swiper-slide-active,
+  &.swiper-slide-next {
+    .slider__item-text {
+      animation: slideToLeft 0.6s ease-out forwards;
+    }
+  }
 }
 
 .slider__item-title {
@@ -273,5 +280,16 @@
       height: 0.4rem;
       background-color: $c-light;
     }
+  }
+}
+
+@keyframes slideToLeft {
+  from {
+    opacity: 0;
+    transform: translateX(40px);
+  }
+  to {
+    opacity: 1;
+    transform: translateX(0);
   }
 }
