--- a/source/scss/blocks/form.scss
+++ b/source/scss/blocks/form.scss
@@ -2,6 +2,7 @@
   position: relative;
   display: flex;
   align-items: center;
+  justify-content: flex-end;
 }
 
 .form__label {
@@ -43,6 +44,7 @@
   border: 0;
   border-radius: 3rem;
   outline: none;
+  animation: formFieldGrow 1s forwards;
 
   &:focus {
     border: 1px solid $c-purple;
@@ -79,7 +81,7 @@
 }
 
 .form__button {
-  flex-grow: 1;
+  width: 18rem;
 
   @media (orientation: portrait) {
     position: relative;
@@ -144,5 +146,15 @@
     @media (max-width: $mobile) and (orientation: landscape) {
       width: calc(100% - 5rem);
     }
+  }
+}
+
+@keyframes formFieldGrow {
+  from {
+    flex-grow: 0;
+    width: 0;
+  }
+  to {
+    flex-grow: 1;
   }
 }
