--- a/source/scss/blocks/page-header.scss
+++ b/source/scss/blocks/page-header.scss
@@ -246,11 +246,12 @@
       content: "";
       position: absolute;
       bottom: 0;
-      width: 100%;
+      width: 0;
       height: 2px;
       background-color: $c-light;
-      display: none;
+      display: block;
       left: 0;
+      transition: width 0.23s ease;
 
       @media (min-width: $stop-scaling) {
         left: -5px;
@@ -272,7 +273,7 @@
 
     &.active {
       &::after {
-        display: block;
+        width: 100%;
       }
     }
 
@@ -282,8 +283,8 @@
       outline: none;
 
       &::after {
-        opacity: 1;
         background-color: $c-purple;
+        width: 100%;
       }
     }
   }
