--- a/source/scss/blocks/social-block.scss
+++ b/source/scss/blocks/social-block.scss
@@ -5,6 +5,11 @@
     .social-block__list {
       opacity: 1;
       pointer-events: auto;
+
+      .social-block__link {
+        opacity: 1;
+        transform: translateY(-2px);
+      }
     }
   }
 }
@@ -35,6 +40,7 @@
     background-color: $c-light;
     border: 2px solid $c-light;
     z-index: -1;
+    transition: all 0.23s ease;
   }
 
   svg {
@@ -168,6 +174,9 @@
   color: $c-light;
   border: 2px solid transparent;
   border-radius: 50%;
+  opacity: 0;
+  transform: translateY(4px);
+  transition: all 0.23s ease-out;
 
   @media (min-width: $stop-scaling) {
     width: 40px;
@@ -219,6 +228,8 @@
   }
 
   &--insta {
+    transition-delay: 0.23s;
+
     svg {
       width: 1.5rem;
       height: 1.5rem;
@@ -231,6 +242,8 @@
   }
 
   &--vk {
+    transition-delay: 0.46s;
+
     svg {
       width: 1.7rem;
       height: 1rem;
