--- a/source/scss/blocks/social-block.scss
+++ b/source/scss/blocks/social-block.scss
@@ -5,11 +5,6 @@
     .social-block__list {
       opacity: 1;
       pointer-events: auto;
-
-      .social-block__link {
-        opacity: 1;
-        transform: translateY(-2px);
-      }
     }
   }
 }
@@ -50,11 +45,21 @@
     height: 2.2rem;
   }
 
-  &:hover,
   .social-block--active & {
-    color: $c-purple;
+    color: $c-light;
 
     &::before {
+      background-color: $c-purple;
+      border-color: $c-purple;
+    }
+  }
+
+  &:hover {
+    color: $c-dark;
+
+    &::before {
+      background-color: $c-light;
+      border-color: $c-light;
       width: 112.5%;
       height: 112.5%;
     }
@@ -65,6 +70,7 @@
     outline: none;
 
     &::before {
+      background-color: $c-light;
       border-color: $c-purple;
     }
 
@@ -176,7 +182,7 @@
   border-radius: 50%;
   opacity: 0;
   transform: translateY(4px);
-  transition: all 0.35s ease-out;
+  transition: all 0.35s ease;
 
   @media (min-width: $stop-scaling) {
     width: 40px;
@@ -228,8 +234,6 @@
   }
 
   &--insta {
-    transition-delay: 0.23s;
-
     svg {
       width: 1.5rem;
       height: 1.5rem;
@@ -242,8 +246,6 @@
   }
 
   &--vk {
-    transition-delay: 0.46s;
-
     svg {
       width: 1.7rem;
       height: 1rem;
@@ -252,6 +254,19 @@
         width: 10px;
         height: 10px;
       }
+    }
+  }
+
+  .social-block--active & {
+    opacity: 1;
+    transform: translateY(-2px);
+
+    &--insta {
+      transition-delay: 0.1s;
+    }
+
+    &--vk {
+      transition-delay: 0.2s;
     }
   }
 }
