--- a/source/scss/blocks/social-block.scss
+++ b/source/scss/blocks/social-block.scss
@@ -29,13 +29,20 @@
   &::before {
     @include center;
     content: "";
-    width: 100%;
-    height: 100%;
+    width: 0;
+    height: 0;
     border-radius: 50%;
     background-color: $c-light;
     border: 2px solid $c-light;
     z-index: -1;
-    transition: all 0.35s ease;
+    transition: all 0.5s cubic-bezier(0.5, 0.75, 0.75, 1.55);
+  }
+
+  .loaded & {
+    &::before {
+      width: 100%;
+      height: 100%;
+    }
   }
 
   svg {
@@ -49,6 +56,7 @@
     color: $c-light;
 
     &::before {
+      transition: all 0.35s ease;
       background-color: $c-purple;
       border-color: $c-purple;
     }
@@ -268,5 +276,16 @@
     &--vk {
       transition-delay: 0.2s;
     }
+  }
+}
+
+@keyframes tryIt {
+  from {
+    width: 0;
+    height: 0;
+  }
+  to {
+    width: 100%;
+    height: 100%;
   }
 }
