--- a/source/scss/general/animations.scss
+++ b/source/scss/general/animations.scss
@@ -1,7 +1,7 @@
 @keyframes fadeIn {
   from {
     opacity: 0;
-    transform: translateY(30px);
+    transform: translateY(2.5rem);
   }
   to {
     opacity: 1;
@@ -12,10 +12,19 @@
 @keyframes slideToLeft {
   from {
     opacity: 0;
-    transform: translateX(40px);
+    transform: translateX(4rem);
   }
   to {
     opacity: 1;
     transform: translateX(0);
+  }
+}
+
+@keyframes fillScreen {
+  from {
+    transform: translateY(100%);
+  }
+  to {
+    transform: translateY(0);
   }
 }
