--- a/source/scss/general/animations.scss
+++ b/source/scss/general/animations.scss
@@ -9,10 +9,21 @@
   }
 }
 
-@keyframes slideToLeft {
+@keyframes slideToLeftL {
   from {
     opacity: 0;
     transform: translateX(4rem);
+  }
+  to {
+    opacity: 1;
+    transform: translateX(0);
+  }
+}
+
+@keyframes slideToLeftS {
+  from {
+    opacity: 0;
+    transform: translateX(2rem);
   }
   to {
     opacity: 1;
