--- a/source/scss/blocks/rules.scss
+++ b/source/scss/blocks/rules.scss
@@ -31,6 +31,8 @@
   font-size: 4.8rem;
   line-height: 0.906;
   letter-spacing: -0.04em;
+  opacity: 0;
+  animation: fadeIn 0.75s forwards;
 
   @media (min-width: $stop-scaling) {
     margin-bottom: 50px;
@@ -59,6 +61,8 @@
   text-transform: uppercase;
   font-size: 2.4rem;
   line-height: 1.2;
+  opacity: 0;
+  animation: fadeIn 0.75s forwards 0.25s;
 
   @media (min-width: $stop-scaling) {
     margin-left: 58px;
@@ -163,6 +167,8 @@
     border-radius: 50%;
     line-height: 5rem;
     text-align: center;
+    transform: scale(0);
+    color: $c-light;
 
     @media (max-width: $tablet) and (orientation: portrait) {
       top: 1rem;
@@ -183,9 +189,23 @@
 
   p {
     margin: 0;
+    opacity: 0;
+    transform: translateX(2rem);
 
     @media (max-width: $tablet) and (orientation: portrait) {
       min-height: calc(1.4rem * 2.2);
+    }
+  }
+
+  @for $i from 1 through 4 {
+    &:nth-child(#{$i}) {
+      &::before {
+        animation: scaleRulesItem 0.65s cubic-bezier(0.35, 1.55, 0.65, 1) forwards #{0.15 + $i * 0.15}s;
+      }
+
+      p {
+        animation: slideToLeftS 0.75s cubic-bezier(0.35, 1, 0.65, 1) forwards #{0.15 + $i * 0.15}s;
+      }
     }
   }
 }
@@ -194,6 +214,14 @@
   position: absolute;
   bottom: 6rem;
   right: 5.6rem;
+  opacity: 0;
+  visibility: hidden;
+
+  &.active {
+    opacity: 1;
+    visibility: visible;
+    animation: expandRulesLink 0.45s cubic-bezier(0.25, 1, 0.9, 1) forwards;
+  }
 
   @media (min-width: $stop-scaling) {
     bottom: 60px;
@@ -213,5 +241,31 @@
   @media (max-width: $mobile) and (orientation: landscape) {
     bottom: 2rem;
     right: 1.5rem;
+  }
+}
+
+@keyframes scaleRulesItem {
+  0% {
+    transform: scale(0);
+    color: transparent;
+  }
+  50% {
+    color: $c-light;
+  }
+  100% {
+    transform: scale(1);
+  }
+}
+
+@keyframes expandRulesLink {
+  0% {
+    width: 0;
+    color: transparent;
+  }
+  95% {
+    color: $c-dark;
+  }
+  100% {
+    width: 18rem;
   }
 }
