--- a/source/scss/general/animations.scss
+++ b/source/scss/general/animations.scss
@@ -39,3 +39,14 @@
     transform: translateY(0);
   }
 }
+
+@keyframes opacity {
+  from {
+    opacity: 0;
+    visibility: hidden;
+  }
+  to {
+    opacity: 1;
+    visibility: visible;
+  }
+}
