--- a/source/scss/style.scss
+++ b/source/scss/style.scss
@@ -5,6 +5,7 @@
 @import "general/fonts.scss";
 @import "general/scaffolding.scss";
 @import "general/animations.scss";
+@import "general/accent-typography.scss";
 
 @import "blocks/animation-screen.scss";
 @import "blocks/btn.scss";
