--- a/source/scss/blocks/intro.scss
+++ b/source/scss/blocks/intro.scss
@@ -34,6 +34,7 @@
   letter-spacing: -0.04em;
 
   .word {
+    padding: 0.5rem 0;
     margin: 0 -0.04em;
   }
 
@@ -53,6 +54,11 @@
   @media (max-width: $tablet) and (orientation: portrait) {
     max-width: 100%;
     font-size: 3.6rem;
+
+    &.active .word > .letter {
+      transform: translate3d(0, 1rem, 0);
+    }
+
   }
 
   @media (max-width: $tablet) and (orientation: landscape) {
@@ -182,19 +188,15 @@
   letter-spacing: -0.04em;
 
   .word {
-    padding: 0 0.1em;
+    padding: 0.5rem 0.1em;
 
     &:first-child {
       padding-left: 0;
     }
-
-    &:last-child {
-      padding-right: 0;
-    }
   }
 
   .word > .letter {
-    transform: translate3d(0, 4.8rem, 0);
+    transform: translate3d(0, 5.5rem, 0);
   }
 
   &.active .word > .letter {
