--- a/source/scss/blocks/page-header.scss
+++ b/source/scss/blocks/page-header.scss
@@ -35,10 +35,6 @@
   padding: 1rem 0;
   width: 10rem;
   color: $c-light;
-  opacity: 0;
-  visibility: hidden;
-  transform: translateX(-2rem);
-  transition: transform 0.5s cubic-bezier(0.25, 1, 0.9, 1) 0.1s;
 
   @media (min-width: $stop-scaling) {
     top: -5px;
@@ -72,12 +68,6 @@
     display: block;
     width: 100%;
     height: auto;
-  }
-
-  .loaded & {
-    opacity: 1;
-    visibility: visible;
-    transform: translateX(0);
   }
 }
 
@@ -140,14 +130,6 @@
 .page-header__nav {
   display: flex;
   align-items: center;
-  opacity: 0;
-  visibility: hidden;
-  transition: opacity 0.65s cubic-bezier(0.25, 1, 0.9, 1) 0.15s;
-
-  .loaded & {
-    opacity: 1;
-    visibility: visible;
-  }
 
   @media (max-width: $tablet) and (orientation: portrait) {
     position: fixed;
@@ -264,17 +246,11 @@
       content: "";
       position: absolute;
       bottom: 0;
-      width: 0;
+      width: 100%;
       height: 2px;
       background-color: $c-light;
-      display: block;
-      right: 0;
-      transition: width 0.35s ease 0.15s;
-
-      @media (min-width: $stop-scaling) {
-        left: -5px;
-        right: -5px;
-      }
+      display: none;
+      left: 0;
 
       @media (max-width: $tablet) and (orientation: portrait) {
         left: 0;
@@ -289,13 +265,9 @@
       }
     }
 
-    .loaded &.active,
-    &:hover,
-    &:focus {
+    &.active {
       &::after {
-        width: 100%;
-        right: auto;
-        left: 0;
+        display: block;
       }
     }
 
@@ -305,7 +277,7 @@
       outline: none;
 
       &::after {
-        transition-delay: 0s;
+        opacity: 1;
         background-color: $c-purple;
       }
     }
