--- a/source/scss/blocks/slider.scss
+++ b/source/scss/blocks/slider.scss
@@ -5,6 +5,7 @@
 
   .swiper-wrapper {
     min-height: 100vh;
+    box-sizing: border-box;
 
     @media (max-width: $tablet) and (orientation: portrait) {
       min-height: calc(var(--vh, 1vh) * 100);
@@ -62,13 +63,6 @@
       }
     }
   }
-
-  &.swiper-slide-active,
-  &.swiper-slide-next {
-    .slider__item-text {
-      animation: slideToLeftL 0.5s ease-out forwards 0.65s;
-    }
-  }
 }
 
 .slider__item-title {
@@ -102,7 +96,6 @@
   max-width: 34rem;
   font-size: 1.8rem;
   line-height: 2rem;
-  opacity: 0;
 
   @media (min-width: $stop-scaling) {
     margin-top: 36px;
@@ -162,28 +155,10 @@
   width: 4rem;
   height: 4rem;
   color: $c-dark;
-  visibility: hidden;
-  will-change: transform;
 
   @media (min-width: $stop-scaling) {
     width: 40px;
     height: 40px;
-  }
-
-  &--prev,
-  &--next {
-    animation-duration: 0.75s;
-    animation-timing-function: cubic-bezier(0.25, 0.1, 0, 1.55);
-    animation-fill-mode: forwards;
-    animation-delay: 0.95s;
-  }
-
-  &--prev {
-    animation-name: rollToRight;
-  }
-
-  &--next {
-    animation-name: rollToLeft;
   }
 
   &::before {
